Crop node resets values to 0 #32931

Closed
opened 2012-10-20 20:45:49 +02:00 by Daniel Toplak · 8 comments

%%%I have a crop node in a group which should crop out the middle 512512 pixels from a 15361536 image.
I use Left= 512, Right=1024, Up=512, Down=1024.

I have viewer node in my group which display the correct croped image in the backdrop, but when I close my group the variables of the crop node are reseted to 0 and in the blender consol I see the following error:
OpenColorIO Error: PackedImageDesc Error: Image dimensions must be positive for both x,y. '1x0' is not allowed.

I have tried with an easy setup but there it work.

Blender Version 2.64a Windows 64.
%%%

%%%I have a crop node in a group which should crop out the middle 512*512 pixels from a 1536*1536 image. I use Left= 512, Right=1024, Up=512, Down=1024. I have viewer node in my group which display the correct croped image in the backdrop, but when I close my group the variables of the crop node are reseted to 0 and in the blender consol I see the following error: OpenColorIO Error: PackedImageDesc Error: Image dimensions must be positive for both x,y. '1x0' is not allowed. I have tried with an easy setup but there it work. Blender Version 2.64a Windows 64. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can confirm this happens when the output of a group node is detached in r51430. I'll add a blend file that proofs the behaviour.%%%

%%%I can confirm this happens when the output of a group node is detached in r51430. I'll add a blend file that proofs the behaviour.%%%

%%%Here's the file. (Didn't know I have to add it to the same message.)%%%

%%%Here's the file. (Didn't know I have to add it to the same message.)%%%
Member

%%%Patch looks ok, but let's ask Jeroen first.%%%

%%%Patch looks ok, but let's ask Jeroen first.%%%

%%%I added a patch, which solves the problem for me.

I also found, when you don't have an output connected on the crop node in a group, it always resets it's values to 0 (I think I fixed it too).%%%

%%%I added a patch, which solves the problem for me. I also found, when you don't have an output connected on the crop node in a group, it always resets it's values to 0 (I think I fixed it too).%%%
Author

%%%Tested the patch, it works fine, thanks.

One thing: it will be nice if the left, right, up, down values can be controlled by a slot.%%%

%%%Tested the patch, it works fine, thanks. One thing: it will be nice if the left, right, up, down values can be controlled by a slot.%%%
Member

%%%Patch committed in revision 51483.
Thanks for the fix Markus and thanks for the report Daniel!

the fix was related that the old compositor decides the images based on its inputs, but this is only validated in tiles when it is connected. The old implementation has been copied over, but not adjusted for the new behavior. The fix does this.

IMO the whole node needs to be re-designed :)

%%%

%%%Patch committed in revision 51483. Thanks for the fix Markus and thanks for the report Daniel! the fix was related that the old compositor decides the images based on its inputs, but this is only validated in tiles when it is connected. The old implementation has been copied over, but not adjusted for the new behavior. The fix does this. IMO the whole node needs to be re-designed :) %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32931
No description provided.