Fix for [#32931] Crop node resets values to 0 Patch done by Markus Kasten Thanks for that!